erDiagram
    Games {
        int id PK "NOT NULL, UNIQUE"
        int type "CHECK (type IN ('winter', 'summer'))"
        int year "CHECK (year BETWEEN 1960 AND 9999)"
        int host_id FK
        date start
        date end "CHECK (end > start)"
        int countries
        int events
        int sports
        int participants_m
        int participants_f
        int participants
        string highlights
        string URL
    }
    Team {
        string code PK "CHECK (LENGTH(code) = 3 AND UPPER(code) = code)"
        string name "CHECK (NAME IS NOT NULL)"
        string region "CHECK (region IS 'Asia' or 'Europe' or'Africa' or 'America' or 'Oceania' or NULL)"
        string sub_region "CHECK(sub_region IS one of ('South, South-East', 'North, South, West', 'North', 'West, Central', 'Carribean, Central', 'South','East', 'Oceania', 'West','Central, East') or NULL)"
        string member_type "CHECK (member_type IS ONE OF ('country', 'team', 'dissolved', 'construct'))"
        string notes "CHECK (notes IS NOT NULL)"
        int country_id FK "ON UPDATE CASCADE, ON DELETE SET NULL"
    }
    Host {
        int id PK
        string place_name
        int country_id FK "ON UPDATE CASCADE, ON DELETE SET NULL"
    }
    Disability {
        int id PK
        string description
    }
    Country {
        int id PK
        string country
    }
    GamesTeam {
        int id PK
        int games_id FK "ON UPDATE CASCADE, ON DELETE CASCADE"
        str team_code FK "ON UPDATE CASCADE, ON DELETE CASCADE"
    }
    GamesDisability {
        int id PK
        int games_id FK "ON UPDATE CASCADE, ON DELETE CASCADE"
        int disability_id FK "ON UPDATE CASCADE, ON DELETE CASCADE"
    }
    GamesHost {
        int id PK
        int games_id FK "ON UPDATE CASCADE, ON DELETE CASCADE"
        int host_id FK "ON UPDATE CASCADE, ON DELETE CASCADE"
    }
    Games ||--|{ GamesTeam: ""
    Team ||--|{ GamesTeam: ""
    Games ||--|{ GamesDisability: ""
    Disability ||--|{ GamesDisability: ""
    Host ||--|{ GamesHost: ""
    Games ||--|{ GamesHost: ""
    Country ||--o{ Host: ""
    Country ||--o{ Team: ""
